first web commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
+
 <body>
-    Hello World! I am Ray.
-    <a href="./cbse.html">CBSE Tips</a>
+
+    <div class="topnav">
+        <p>Welcome!</p>
+        <div class="link-group">
+          <a class="active" href="./index.html">Home</a>
+          <a href="./blogs.html">Blogs</a>
+          <a href="./resume.html">Resume</a>
+        </div>
+      </div>
+
+    <div style="padding-left:16px">
+        <h2></h2>
+        <p>Some content..</p>
+    </div>
+
+    <footer>
+      <p>a personal website by Ray Han</p>
+      <div class="links">
+        <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>  
+        <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>    
+        <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
+        <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
+        <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+      </div>
+    </footer>
 </body>
 </html>
