--- a/blogs.html
+++ b/blogs.html
@@ -22,6 +22,17 @@
         <p>Some content..</p>
     </div>
 
+
+    <footer>
+      <p>a personal website by Ray Han</p>
+      <div class="links">
+        <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>  
+        <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>    
+        <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
+        <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
+        <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+      </div>
+    </footer>
     
 
 </body>
