--- a/resume.html
+++ b/resume.html
@@ -19,5 +19,16 @@
     <div class="embed badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="rayhan-phy" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://jp.linkedin.com/in/rayhan-phy?trk=profile-badge"></a></div>
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
+
+    <footer>
+      <p>a personal website by Ray Han</p>
+      <div class="links">
+        <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>  
+        <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>    
+        <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
+        <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
+        <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+      </div>
+    </footer>
 </body>
 </html>
