--- a/blogs.html
+++ b/blogs.html
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,8 +20,21 @@
       </div>
 
     <div style="padding-left:16px">
-        <h2></h2>
-        <p>Some content..</p>
+        <h2>CBSE Board Exam Tips</h2>
+        <p>
+          <ul>
+        <li>Pay attention in class so you don’t have to spend much time studying at home, and get your doubts cleared quickly.</li>
+        <li>Make sure to study well for each class test—basically revise thoroughly.</li>
+        <li>For science subjects, definitely try to do the Exemplar questions; they are higher level and strengthen concepts.</li>
+        <li>Solve the back exercises and in-text questions for each chapter (before each exam and after the chapter is done) and get familiar with the solving style (should take 30–40 minutes per chapter).</li>
+        <li>For time management, do a lot of practice papers—around 5 for each year since the post-COVID batch. Try solving them in 2 hours to leave time for checking and difficult questions.</li>
+        <li><strong>Important:</strong> Concepts need to be strong. Just knowing formulas isn’t enough for tricky word problems—watch YouTube videos, check online forums (Reddit, StackExchange), or use ChatGPT if something feels unclear.</li>
+        <li>For English, MCQs were the hardest for me—do reading practice from past year papers and use this PDF with chapter-specific questions: <a href="https://cbseacademic.nic.in/web_material/QuestionBank/ClassXII/EnglishCoreXII.pdf" target="_blank">English Question Bank PDF</a>.</li>
+        <li>For Chemistry, organic and inorganic reactions can be confusing. Use Chemistry LibreTexts for organic and JEEWallah on YouTube for inorganic.</li>
+        <li>For Physics and Maths, practicing textbook problems, Exemplar, and past year papers (timed) is sufficient—even though I did a lot of extra self-learning for uni apps.</li>
+        <li>For Computer Science, get really comfortable with Python in class 11. Learn the fundamentals well from a YouTube channel and do the 11th-grade project properly.</li>
+    </ul>
+        </p>
     </div>
 
 
