--- a/index.html
+++ b/index.html
@@ -2,39 +2,61 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
 <body>
 
-    <div class="topnav">
-        <p>Welcome!</p>
-        <div class="link-group">
-          <a class="active" href="./index.html">Home</a>
-          <a href="./blogs.html">Blogs</a>
-          <a href="./resume.html">Resume</a>
-        </div>
-      </div>
-
-    <div style="padding-left:16px">
-        <h2></h2>
-        <p>Some content..</p>
+  <div class="topnav">
+    <p>Welcome!</p>
+    <div class="link-group">
+      <a class="active" href="./index.html">Home</a>
+      <a href="./blogs.html">Blogs</a>
+      <a href="./resume.html">Resume</a>
     </div>
+  </div>
 
-    <footer>
-      <p>a personal website by Ray Han</p>
-      <div class="links">
-        <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>  
-        <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>    
-        <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
-        <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
-        <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+  <div style="padding-left:16px">
+    <h2></h2>
+    <p class="paragraph1">Hey, I am Ray! </p>
+
+    
+
+    <div class="blog">
+      <button class="collapsible active-blog">About me</button>
+      <div class="content2">
+        <p> Pre-freshman (Mathematics and Physics dual major). <br>
+      I am self-learning the Cambridge MMath course and am interested in obtaining research internships. <br>
+      Passionate about theoretical High Energy Physics and Cosmology: learning more about GR, QFT, and quantum
+      algorithms, and authored a research paper on spatial human comfort. <br>
+      Led AI projects like JIMI—an Intel-recognized, textbook-to-shorts generator. My work spans from robotics and game
+      development to Arduino mentorship and community leadership with food banks and disability support groups. <br>
+      Fluent in four languages and grounded in tech and theory, I'm building toward a future of accessible, elegant
+      science.</p>
+      <a href="./resume.html" ><button>Find out more &raquo;</button></a>
+      <br><br>
       </div>
-    </footer>
+    </div>
+  </div>
+
+  <footer>
+    <p>a personal website by Ray Han</p>
+    <div class="links">
+      <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>
+      <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>
+      <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
+      <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
+      <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+    </div>
+  </footer>
+
+
+  <script src="main.js"></script>
 </body>
+
 </html>
