--- a/posts.html
+++ b/posts.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-
+  <title>Posts</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,7 +15,7 @@
     <p>Check out a few posts I made</p>
     <div class="link-group">
       <a href="./index.html">Home</a>
-      <a class="active" href="./blogs.html">Blogs</a>
+      <a class="active" href="./posts.html">Posts</a>
       <a href="./resume.html">Resume</a>
     </div>
   </div>
@@ -58,7 +58,8 @@
         <b>Mathopoliz</b> <br>
         Here's the <a href="https://www.youtube.com/channel/UCtXmxWuW3c1pWcTVD8DQVxg">channel link</a>.<br>
         And a <a href="https://mathopoliz.wixsite.com/official">website</a> I made using Wix.
-      </div></div>
+      </div>
+    </div>
 
     <footer>
       <p>a personal website by Ray Han</p>
