--- a/resume.html
+++ b/resume.html
@@ -1,37 +1,44 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
-    <div class="topnav">
-        <p>Résumé</p>
-        <div class="link-group">
-          <a href="./index.html">Home</a>
-          <a href="./blogs.html">Blogs</a>
-          <a class="active" href="./resume.html">Resume</a>
-        </div>
-      </div>
+  <div class="topnav">
+    <p>Résumé</p>
+    <div class="link-group">
+      <a href="./index.html">Home</a>
+      <a href="./posts.html">Posts</a>
+      <a class="active" href="./resume.html">Resume</a>
+    </div>
+  </div>
 
-    <div class="embed badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="rayhan-phy" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://jp.linkedin.com/in/rayhan-phy?trk=profile-badge"></a></div>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <div class="embed badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark"
+    data-type="VERTICAL" data-vanity="rayhan-phy" data-version="v1"><a class="badge-base__link LI-simple-link"
+      href="https://jp.linkedin.com/in/rayhan-phy?trk=profile-badge"></a></div>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
 
-    <footer>
-      <p>a personal website by Ray Han</p>
-      <div class="links">
-        <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>  
-        <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>    
-        <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
-        <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
-        <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
-      </div>
-    </footer>
+  <footer>
+    <p>a personal website by Ray Han</p>
+    <div class="links">
+      <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>
+      <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>
+      <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
+      <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
+      <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
+    </div>
+  </footer>
+
+  <script src="main.js"></script>
 </body>
+
 </html>
