--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-
+  <title>Ray Han</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -16,7 +16,7 @@
     <p>Welcome!</p>
     <div class="link-group">
       <a class="active" href="./index.html">Home</a>
-      <a href="./blogs.html">Blogs</a>
+      <a href="./posts.html">Posts</a>
       <a href="./resume.html">Resume</a>
     </div>
   </div>
@@ -25,21 +25,22 @@
     <h2></h2>
     <p class="paragraph1">Hey, I am Ray! </p>
 
-    
+
 
     <div class="blog">
       <button class="collapsible active-blog">About me</button>
       <div class="content2">
         <p> Pre-freshman (Mathematics and Physics dual major). <br>
-      I am self-learning the Cambridge MMath course and am interested in obtaining research internships. <br>
-      Passionate about theoretical High Energy Physics and Cosmology: learning more about GR, QFT, and quantum
-      algorithms, and authored a research paper on spatial human comfort. <br>
-      Led AI projects like JIMI—an Intel-recognized, textbook-to-shorts generator. My work spans from robotics and game
-      development to Arduino mentorship and community leadership with food banks and disability support groups. <br>
-      Fluent in four languages and grounded in tech and theory, I'm building toward a future of accessible, elegant
-      science.</p>
-      <a href="./resume.html" ><button>Find out more &raquo;</button></a>
-      <br><br>
+          I am self-learning the Cambridge MMath course and am interested in obtaining research internships. <br>
+          Passionate about theoretical High Energy Physics and Cosmology: learning more about GR, QFT, and quantum
+          algorithms, and authored a research paper on spatial human comfort. <br>
+          Led AI projects like JIMI—an Intel-recognized, textbook-to-shorts generator. My work spans from robotics and
+          game
+          development to Arduino mentorship and community leadership with food banks and disability support groups. <br>
+          Fluent in four languages and grounded in tech and theory, I'm building toward a future of accessible, elegant
+          science.</p>
+        <a href="./resume.html"><button>Find out more &raquo;</button></a>
+        <br><br>
       </div>
     </div>
   </div>
@@ -52,8 +53,8 @@
       <a class="icon" href="https://www.linkedin.com/in/rayhan-phy/"><i class="fa fa-linkedin"></i></a>
       <a class="icon" href="https://www.instagram.com/ray_han_404/"><i class="fa fa-instagram"></i></a>
       <a class="icon" href="tel:+819086629026"><i class="fa fa-phone"></i></a>
-    </div>
   </footer>
+  </div>
 
 
   <script src="main.js"></script>
