--- a/posts.html
+++ b/posts.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-
+  <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p>
   <div class="topnav">
-    <p>Check out a few posts I made</p>
+    <p style="font-style: italic;">Check out a few posts I made</p>
     <div class="link-group">
       <a href="./index.html">Home</a>
       <a class="active" href="./posts.html">Posts</a>
@@ -62,7 +62,7 @@
     </div>
 
     <footer>
-      <p>a personal website by Ray Han</p>
+      <p>a personal website by Ray Han (25/05/2025)</p>
       <div class="links">
         <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>
         <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>
