--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume</title>
+  <title>Minigames</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
@@ -11,31 +11,21 @@
 </head>
 
 <body>
-  <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p>
+
   <div class="topnav">
-    <p style="font-style: italic;">Résumé</p>
+    <p style="font-style: italic;">Mini-Games</p>
     <div class="link-group">
       <a href="./index.html">Home</a>
       <a href="./posts.html">Posts</a>
-      <a class="active" href="./resume.html">Resume</a>
+      <a href="./resume.html">Resume</a>
+      <a class="active" style="background-color: #ff3800;" href="./games.html">Games</a>
     </div>
-  </div>
-  <div class="embed" style="margin: 2em; width: 270px; background: #111; color: white; padding: 20px; border-radius: 10px;">
-    <img src="./images/pfp.jpeg" alt="Profile" style="width: 60px; height: 60px; border-radius: 50%;">
-    <h2 style="margin: 10px 0 5px;">Rayhan Mohammad R.</h2>
-    <p style="margin: 0; font-size: 14px;">
-      Aspiring Theoretical Physicist | AISC Global Ambassador | Valedictorian 2025 @ IISJ
-    </p>
-    <p style="color: #b0b0b0; font-size: 12px;">Intel Corporation</p>
-    <a href="https://www.linkedin.com/in/rayhan-phy" target="_blank"
-      style="display: inline-block; margin-top: 10px; padding: 8px 12px; border: 1px solid white; border-radius: 25px; text-decoration: none; color: white;">View
-      profile</a>
   </div>
 
 
 
   <footer>
-    <p>a personal website by Ray Han (25/05/2025)</p>
+    <p>a personal website by Ray Han</p>
     <div class="links">
       <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>
       <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>
