--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
 
+  <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p>
   <div class="topnav">
-    <p>Welcome!</p>
+    <p style="font-style: italic;">Welcome!</p>
     <div class="link-group">
       <a class="active" href="./index.html">Home</a>
       <a href="./posts.html">Posts</a>
@@ -24,6 +25,7 @@
   <div style="padding-left:16px">
     <h2></h2>
     <p class="paragraph1">Hey, I am Ray! </p>
+    
 
 
 
@@ -45,8 +47,18 @@
     </div>
   </div>
 
+  <div class="embed2" style="margin: 2em; width: 270px; background: #111; color: white; padding: 20px; border-radius: 10px;">
+    <h2 style="margin: 10px 0 5px;">Mini-Games</h2>
+    <p style="margin: 0; font-size: 14px;">
+      For when you visited this website, but you don't know what to do...
+    </p>
+    <p style="color: #b0b0b0; font-size: 12px;">i use cookies to store your progress </p>
+    <a href="./games.html" 
+      style="display: inline-block; margin-top: 10px; padding: 8px 12px; border: 1px solid white; border-radius: 25px; text-decoration: none; color: white;">Play here</a>
+  </div>
+
   <footer>
-    <p>a personal website by Ray Han</p>
+    <p>a personal website by Ray Han (25/05/2025)</p>
     <div class="links">
       <a class="icon" href="mailto:rayhan.mohammadriyaz@gmail.com"><i class="fa fa-envelope"></i></a>
       <a class="icon" href="https://github.com/rayn404"><i class="fa fa-github"></i></a>
@@ -57,7 +69,6 @@
   </div>
 
 
-  <script src="main.js"></script>
 </body>
 
 </html>
