--- a/resume.html
+++ b/resume.html
@@ -35,17 +35,11 @@
   <div class="embed" style="margin: 2em; width: 270px; background: #111; color: white; padding: 20px; border-radius: 10px;">
     <i style="scale: 3; margin: 1em;" class="fa fa-download" ></i>
     <h2 style="margin: 10px 0 5px;">Resume PDF</h2>
-    <p style="margin: 0; font-size: 14px;">
-      Download the PDF of the resume
-    </p>
-    <p style="color: #b0b0b0; font-size: 12px;">One-pager and Two-pager links below</p>
+    <p style="color: #b0b0b0; font-size: 12px;">Click below to download the PDF</p>
     <a href="./downloads/RAY_resume.pdf" target="_blank"
       style="display: inline-block; margin-top: 10px; padding: 8px 12px; border: 1px solid white; border-radius: 25px; text-decoration: none; color: white;" download>
-      Full Resume
-</a>
-    <a href="./downloads/RAY_resume_1.pdf" target="_blank"
-      style="display: inline-block; margin-top: 10px; padding: 8px 12px; border: 1px solid white; border-radius: 25px; text-decoration: none; color: white;" download>
-      1-page</a>
+      Download
+    </a>
   </div>
 
 
