--- a/posts.html
+++ b/posts.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p>
+  <!-- <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p> -->
   <div class="topnav">
     <p style="font-style: italic;">Check out a few posts I made</p>
     <div class="link-group">
