--- a/games.html
+++ b/games.html
@@ -22,7 +22,18 @@
     </div>
   </div>
 
-
+  <div class="embed" style="margin: 2em; width: 270px; background: #111; color: white; padding: 20px; border-radius: 10px;">
+    <img src="./snake/static/snake-game-logo.png" alt="Snake Game" style="width: 60px; height: 60px; border-radius: 50%;">
+    <h2 style="margin: 10px 0 5px;">Snake Game</h2>
+    <p style="margin: 0; font-size: 14px;">
+      snake go up, down, left, right<br>
+      eat the food, grow longer<br>
+      avoid the walls and yourself<br>
+    </p>
+    <p style="color: #b0b0b0; font-size: 12px;">Good Game</p>
+    <a href="./snake/snake_game.html" target="_blank"
+      style="display: inline-block; margin-top: 10px; padding: 8px 12px; border: 1px solid white; border-radius: 25px; text-decoration: none; color: white;">Play</a>
+  </div>
 
   <footer>
     <p>a personal website by Ray Han</p>
