--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p>
+  <!-- <p class="paragraph1" style="font-size: 32px;"><i>This website is in development...</i></p> -->
   <div class="topnav">
     <p style="font-style: italic;">Résumé</p>
     <div class="link-group">
